# motu_datastore_client

./: Makefile  README.md  pyproject.toml  requirements.txt  run  setup.cfg
.github/workflows/: publish-to-pypi-test.yml  publish-to-pypi.yml  release-publish.yml  run-tests.yml
package/motu_datastore_client/: __init__.py  datastore_client.py
tests/unit/: test_datastore_client.py
