[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motu_datastore_client"
version = "0.1.1"
description = "A web client for interfacing with a MOTU AVB Server."
readme = "README.md"
authors = [{ name = "Christopher Johnston", email = "christopher_johnston@me.com" }]
license = { file = "LICENSE" }
dependencies = [
    "aiohttp",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["motu", "avb", "client"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/ChristopherJohnston/motu_datastore_client"